// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wmlQuery select tokenizer should tokenize a complex sequence 1`] = `
Array [
  Object {
    "endIdx": 0,
    "startIdx": 0,
    "type": "GroupOpen",
  },
  Object {
    "endIdx": 5,
    "startIdx": 1,
    "tag": "Asset",
    "type": "Tag",
  },
  Object {
    "endIdx": 6,
    "startIdx": 6,
    "type": "Comma",
  },
  Object {
    "endIdx": 12,
    "startIdx": 8,
    "tag": "Story",
    "type": "Tag",
  },
  Object {
    "endIdx": 13,
    "startIdx": 13,
    "type": "GroupClose",
  },
  Object {
    "endIdx": 18,
    "startIdx": 15,
    "tag": "Room",
    "type": "Tag",
  },
  Object {
    "endIdx": 24,
    "startIdx": 19,
    "type": "First",
  },
  Object {
    "endIdx": 29,
    "startIdx": 26,
    "tag": "Exit",
    "type": "Tag",
  },
  Object {
    "endIdx": 39,
    "key": "to",
    "startIdx": 30,
    "type": "Property",
    "value": "ABC",
  },
]
`;

exports[`wmlQuery select tokenizer should tokenize a sequence of tags 1`] = `
Array [
  Object {
    "endIdx": 4,
    "startIdx": 0,
    "tag": "Asset",
    "type": "Tag",
  },
  Object {
    "endIdx": 9,
    "startIdx": 6,
    "tag": "Room",
    "type": "Tag",
  },
  Object {
    "endIdx": 14,
    "startIdx": 11,
    "tag": "Exit",
    "type": "Tag",
  },
]
`;

exports[`wmlQuery select tokenizer should tokenize a single tag 1`] = `
Array [
  Object {
    "endIdx": 3,
    "startIdx": 0,
    "tag": "Room",
    "type": "Tag",
  },
]
`;
